# base-python

./: .gitignore  .pre-commit-config.yaml  README.md  api.md  pyproject.toml  setup.py
contiguity_base/: __init__.py
contiguity_base/api/: __init__.py  async_contiguity.py  contiguity.py
contiguity_base/base/: __init__.py  contigiuity.py
examples/: basic_usage.py  pydantic_usage.py
src/contiguity_base/: __init__.py  _auth.py  _client.py  base.py
tests/: test_base.py  test_base_dict.py  test_base_model.py  test_base_typeddict.py
