[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "contiguity_base"
dynamic = ["version"]
description = "The official Python SDK for Contiguity Base"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
authors = [
    {name = "Contiguity", email = "help@contiguity.support"},
]
keywords = [
    "python",
    "contiguity",
    "deta",
    "base",
    "database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/contiguity/base-python"

[tool.setuptools]
package-data = {contiguity_base = ["py.typed"]}

[tool.setuptools.dynamic]
version = {attr = "contiguity_base.__version__"}

[tool.uv]
dev-dependencies = [
    "pre-commit~=3.8.0",
]

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D"]

[tool.pyright]
venvPath = "."
venv = ".venv"
